# htmltools

./: .gitignore  Makefile  html.cabal  notes.txt
lib/: Html.hs
lib/Html/: Attributes.hs  Elements.hs
lib/Html/Internal/: Attributes.hs  Elements.hs
scripts/: add_category_element_constraints.sql  config.js  constraints.sql  create_schema.sql  element_contents.sql  elements_attributes.sql  elements_categories.sql  gendb.sh  gentool.js  haskell.js  html.db  index_spec.js  package-lock.json  package.json
scripts/data/: attributes.sql  attributes.txt  categories.sql  categories_elements.sql  elements.sql
scripts/migrations/: category_constraints.sql  element_contents.sql  element_kinds.sql  elements_attributes.sql
scripts/migrations/data/: attributes.sql  categories.sql  categories_elements.sql  elements.sql
src/: Html.hs
test/Html/: ElementsSpec.hs
tools/: Main.hs
