cabal-version: 2.4
name: html
version: 0.0.0.1
author: Justin Christensen
maintainer: wroathe@gmail.com

extra-source-files: *.md

common options
    ghc-options: -Wall -Wextra
    build-depends: base ^>= 4.14.1.0
    default-language: Haskell2010

library
    import: options
    build-depends:
        text ^>= 1.2.4.1
    exposed-modules:  
          Html
        , Html.Elements
        , Html.Attributes
    other-modules:
          Html.Internal.Elements
        , Html.Internal.Attributes
    hs-source-dirs: lib

