cabal-version: 2.4
name: html
version: 0.0.0.1
author: Justin Christensen
maintainer: wroathe@gmail.com

extra-source-files: *.md

common options
    ghc-options: -Wall -Wextra
    build-depends: base ^>= 4.14.1.0
    default-language: Haskell2010

library
    import: options
    exposed-modules:  
          Html
        , Html.Elements
        , Html.Attributes
    other-modules:
          Html.Internal.Elements
        , Html.Internal.Attributes
    hs-source-dirs: lib

test-suite test
    import: options
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules: Html.ElementsSpec
    build-depends:
          html
        , hspec ^>= 2.7.10,
    build-tool-depends: hspec-discover:hspec-discover ^>= 2.7.10
